// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildInfraSpecifications snapshot tests for AWS Build Infra Render AWS Build Infra view 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="contentSection"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
            id="infrastructureDefinition"
          >
            pipelineSteps.build.infraSpecifications.whereToRun
          </p>
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--horizontal Layout--layout-spacing-xxlarge StyledProps--main"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <div
                    class="bp3-card bp3-elevation-0 Card--card sectionCard"
                  >
                    <div
                      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-variation-form-help StyledProps--padding-bottom-medium"
                      >
                        ci.buildInfra.selectInfra
                      </p>
                      <div
                        class="bp3-form-group ThumbnailSelect--mainContainer"
                        data-id="buildInfraType-0"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                          >
                            <label
                              class="Thumbnail--squareCardContainer"
                            >
                              <div
                                class="bp3-card bp3-elevation-0 Card--card Thumbnail--squareCard Card--selected"
                              >
                                <span
                                  class="Card--corner"
                                >
                                  <span
                                    class="Card--badge"
                                  />
                                  <span
                                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                                    data-icon="main-tick"
                                  >
                                    <svg
                                      height="10"
                                      viewBox="0 0 11 8"
                                      width="10"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </span>
                                </span>
                                <span
                                  class="bp3-icon StyledProps--main"
                                  data-icon="service-aws"
                                >
                                  <svg
                                    height="26"
                                    viewBox="0 0 14 10"
                                    width="26"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                                      fill="#252f3e"
                                    />
                                    <g
                                      fill="#f90"
                                    >
                                      <path
                                        d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                                      />
                                      <path
                                        d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                              <p
                                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
                              >
                                ci.buildInfra.awsVMs
                              </p>
                              <input
                                name="buildInfraType"
                                type="checkbox"
                                value="VM"
                              />
                            </label>
                            <button
                              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main ThumbnailSelect--changeButton StyledProps--intent-primary Button--without-shadow Button--withLeftIcon"
                              data-testid="thumbnail-select-change"
                              type="button"
                            >
                              <span
                                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                                data-icon="Edit"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 16 16"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                  />
                                  <path
                                    clip-rule="evenodd"
                                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    opacity="0.3"
                                  />
                                </svg>
                              </span>
                              <span
                                class="bp3-button-text"
                              >
                                Change
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                      <div>
                        <div
                          style="min-height: 10px;"
                        />
                        <div
                          class="separator"
                        />
                        <div
                          style="min-height: 24px;"
                        />
                      </div>
                      <div
                        style="width: 300px;"
                      >
                        <div
                          class="Text--withDocsTooltip"
                          data-tooltip-id="poolId"
                        >
                          <p
                            class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-bottom-xsmall"
                          >
                            pipeline.buildInfra.poolId
                          </p>
                        </div>
                        <div
                          style="display: flex; align-items: center;"
                        >
                          <div
                            class="bp3-form-group"
                            style="margin-bottom: 0px; flex-grow: 1;"
                          >
                            
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                              >
                                <div
                                  class="bp3-input-group MultiTypeInput--input"
                                >
                                  <input
                                    autocomplete="off"
                                    class="bp3-input"
                                    name="poolId"
                                    type="text"
                                    value=""
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main helptext StyledProps--margin-top-medium StyledProps--padding-large"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-start"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="info-messaging"
                    >
                      <svg
                        fill="none"
                        height="20"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M16 29.004c-7.18 0-13-5.82-13-13s5.82-13 13-13 13 5.82 13 13-5.82 13-13 13zm-1.499-18.5a1.5 1.5 0 103 0 1.5 1.5 0 00-3 0zm1.5 3.474a1 1 0 00-1 1v6.002a1 1 0 102 0v-6.002a1 1 0 00-1-1z"
                          fill="#5452F6"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M16 28.004c-6.627 0-12-5.373-12-12s5.373-12 12-12 12 5.373 12 12-5.373 12-12 12zm-.244-15.011a2.5 2.5 0 11.49 0 2 2 0 011.755 1.985v6.002a2 2 0 01-4 0v-6.002a2 2 0 011.755-1.985zM3 16.004c0 7.18 5.82 13 13 13s13-5.82 13-13-5.82-13-13-13-13 5.82-13 13zm13.001-4a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm-1 2.974a1 1 0 112 0v6.002a1 1 0 11-2 0v-6.002z"
                          fill="#5452F6"
                          fill-rule="evenodd"
                        />
                        <path
                          d="M27.598 28.94c.83.358 1.672-.483 1.314-1.314L25.99 20.85a1 1 0 00-1.625-.311l-3.854 3.854a1 1 0 00.31 1.625l6.777 2.922z"
                          fill="#5452F6"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
                    >
                      ci.buildInfra.infrastructureTypesLabel
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-body2 StyledProps--padding-top-xlarge StyledProps--padding-bottom-xsmall"
                  >
                    ci.buildInfra.k8sLabel
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-small"
                  >
                    ci.buildInfra.kubernetesHelpText
                  </p>
                  <div>
                    <div
                      style="min-height: 24px;"
                    />
                    <div
                      class="separator"
                    />
                    <div
                      style="min-height: 24px;"
                    />
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-body2 StyledProps--padding-bottom-xsmall"
                  >
                    ci.buildInfra.vmLabel
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-small"
                  >
                    ci.buildInfra.awsHelpText
                  </p>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BuildInfraSpecifications snapshot tests for AWS Build Infra initializes ok for AWS VMs Build Infra 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="contentSection"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
            id="infrastructureDefinition"
          >
            pipelineSteps.build.infraSpecifications.whereToRun
          </p>
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--horizontal Layout--layout-spacing-xxlarge StyledProps--main"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <div
                    class="bp3-card bp3-elevation-0 Card--card sectionCard"
                  >
                    <div
                      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--font-variation-form-help StyledProps--padding-bottom-medium"
                      >
                        ci.buildInfra.selectInfra
                      </p>
                      <div
                        class="bp3-form-group ThumbnailSelect--mainContainer"
                        data-id="buildInfraType-0"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                          >
                            <label
                              class="Thumbnail--squareCardContainer"
                            >
                              <div
                                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                                tabindex="0"
                              >
                                <span
                                  class="bp3-icon StyledProps--main"
                                  data-icon="service-kubernetes"
                                >
                                  <svg
                                    height="26"
                                    viewBox="0 0 14 14"
                                    width="26"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M7 .4c-.1 0-.2 0-.3.1L2 2.7c-.2.1-.4.3-.5.6l-1.2 5c-.1.2 0 .5.1.7l.1.1 3.2 4c.2.2.4.3.7.3h5.2c.3 0 .5-.1.7-.3l3.2-4c.2-.2.2-.5.2-.7l-1.2-5c-.1-.3-.2-.5-.5-.6L7.3.6c0-.1-.2-.2-.3-.2z"
                                      fill="#326ce5"
                                    />
                                    <path
                                      d="M7 2.1c-.2 0-.3.1-.3.3v.9c0 .1-.1.1-.1.1v.1c-.2 0-.3 0-.5.1-.7.2-1.4.5-1.8 1l-.1-.1H4c-.1-.1-.2-.2-.4-.3L3.4 4h-.1c-.1 0-.1-.1-.2-.1s-.2 0-.2.1c-.1.1-.1.3.1.4h.1c.1.1.2.1.2.1.2.1.3.2.4.3 0 0 .1.1.1.2l.1.1c-.5.7-.7 1.6-.6 2.5h-.1l-.1.1c-.1 0-.3.1-.5.1h-.4c-.2 0-.3.2-.2.3 0 .1.2.2.4.2h.1c.1 0 .2-.1.3-.1.2-.1.3-.1.5-.1.1 0 .1 0 .2.1h.1c.3.9.9 1.6 1.6 2l-.1.1v.2c-.1.1-.1.3-.3.5-.1.1-.1.1-.1.2v.1c-.1.2 0 .3.1.4s.3 0 .4-.2v-.1c0-.1.1-.2.1-.3.1-.2.1-.4.2-.5 0 0 .1 0 .1-.1l.1-.1c.6.2 1.4.3 2.1.2.2 0 .3-.1.5-.1l.1.1s.1 0 .1.1c.1.1.1.3.2.5 0 .1 0 .2.1.3v.1c.1.2.2.2.4.2.1-.1.2-.2.1-.4v-.1c0-.1-.1-.1-.1-.2-.1-.2-.2-.3-.2-.4V10.4c.8-.5 1.3-1.2 1.6-2h.1s.1-.1.2-.1.3.1.5.1c.1 0 .2.1.3.1h.1c.2 0 .3-.1.4-.2 0-.1-.1-.3-.2-.3h-.4c-.2 0-.4 0-.5-.1-.1 0-.1-.1-.1-.1h-.1c.1-.4 0-.9-.1-1.3s-.3-.9-.5-1.2l.1-.1c0-.1 0-.1.1-.2s.2-.2.4-.3c.1 0 .2-.1.2-.1h.1c.1-.1.2-.3.1-.4s-.3-.1-.4 0h-.1l-.2.2c-.1.1-.3.3-.4.3H10l-.1.1c-.6-.6-1.4-1-2.3-1.1v-.1l-.1-.1V3v-.4c-.2-.3-.3-.5-.5-.5zm-.3 2.2l-.1 1.5c0 .1-.1.2-.2.2h-.1l-1.2-.9c.4-.4.8-.6 1.4-.8zm.7 0c.6.1 1.2.4 1.7.8l-1.2.8c-.1.1-.3.1-.3 0l-.1-.1zM4.6 5.7l1.1 1c.1.1.1.2 0 .3l-.1.1-1.4.4c-.1-.7 0-1.3.4-1.8zm4.9 0c.2.3.3.6.4.9s.1.6.1.9l-1.4-.4c-.1 0-.2-.2-.2-.3s0-.1.1-.1zm-2.7 1h.4l.3.3-.1.4-.4.2-.4-.2-.1-.4zm1.4 1.2c.1 0 .1 0 0 0l1.5.2c-.2.6-.6 1.1-1.2 1.5l-.6-1.4c.1-.1.1-.2.3-.3zm-2.4 0c.1 0 .2.1.2.2v.2l-.6 1.4c-.5-.3-.9-.8-1.2-1.5zm1.2.6l.2.1.7 1.3c-.1 0-.2.1-.3.1-.5.1-1.1.1-1.6-.1l.7-1.3c.2 0 .2-.1.3-.1z"
                                      fill="#fff"
                                      stroke="#fff"
                                      stroke-width="0.25"
                                    />
                                  </svg>
                                </span>
                              </div>
                              <p
                                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
                              >
                                pipeline.serviceDeploymentTypes.kubernetes
                              </p>
                              <input
                                name="buildInfraType"
                                type="checkbox"
                                value="KubernetesDirect"
                              />
                            </label>
                            <label
                              class="Thumbnail--squareCardContainer"
                            >
                              <div
                                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                                tabindex="0"
                              >
                                <span
                                  class="bp3-icon StyledProps--main"
                                  data-icon="service-aws"
                                >
                                  <svg
                                    height="26"
                                    viewBox="0 0 14 10"
                                    width="26"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                                      fill="#252f3e"
                                    />
                                    <g
                                      fill="#f90"
                                    >
                                      <path
                                        d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                                      />
                                      <path
                                        d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                              <p
                                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
                              >
                                ci.buildInfra.awsVMs
                              </p>
                              <input
                                name="buildInfraType"
                                type="checkbox"
                                value="VM"
                              />
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main helptext StyledProps--margin-top-medium StyledProps--padding-large"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-start"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="info-messaging"
                    >
                      <svg
                        fill="none"
                        height="20"
                        viewBox="0 0 32 32"
                        width="20"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M16 29.004c-7.18 0-13-5.82-13-13s5.82-13 13-13 13 5.82 13 13-5.82 13-13 13zm-1.499-18.5a1.5 1.5 0 103 0 1.5 1.5 0 00-3 0zm1.5 3.474a1 1 0 00-1 1v6.002a1 1 0 102 0v-6.002a1 1 0 00-1-1z"
                          fill="#5452F6"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M16 28.004c-6.627 0-12-5.373-12-12s5.373-12 12-12 12 5.373 12 12-5.373 12-12 12zm-.244-15.011a2.5 2.5 0 11.49 0 2 2 0 011.755 1.985v6.002a2 2 0 01-4 0v-6.002a2 2 0 011.755-1.985zM3 16.004c0 7.18 5.82 13 13 13s13-5.82 13-13-5.82-13-13-13-13 5.82-13 13zm13.001-4a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm-1 2.974a1 1 0 112 0v6.002a1 1 0 11-2 0v-6.002z"
                          fill="#5452F6"
                          fill-rule="evenodd"
                        />
                        <path
                          d="M27.598 28.94c.83.358 1.672-.483 1.314-1.314L25.99 20.85a1 1 0 00-1.625-.311l-3.854 3.854a1 1 0 00.31 1.625l6.777 2.922z"
                          fill="#5452F6"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
                    >
                      ci.buildInfra.infrastructureTypesLabel
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-body2 StyledProps--padding-top-xlarge StyledProps--padding-bottom-xsmall"
                  >
                    ci.buildInfra.k8sLabel
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-small"
                  >
                    ci.buildInfra.kubernetesHelpText
                  </p>
                  <div>
                    <div
                      style="min-height: 24px;"
                    />
                    <div
                      class="separator"
                    />
                    <div
                      style="min-height: 24px;"
                    />
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-body2 StyledProps--padding-bottom-xsmall"
                  >
                    ci.buildInfra.vmLabel
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--font-variation-small"
                  >
                    ci.buildInfra.awsHelpText
                  </p>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BuildInfraSpecifications snapshot tests for K8s Build Infra Renders with multiple stages 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="contentSection"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
            id="infrastructureDefinition"
          >
            pipelineSteps.build.infraSpecifications.whereToRun
          </p>
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--horizontal Layout--layout-spacing-xxlarge StyledProps--main"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <div
                    class="bp3-card bp3-elevation-0 Card--card sectionCard"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xxlarge StyledProps--main"
                    >
                      <div
                        class="card"
                      >
                        <p
                          class="StyledProps--font StyledProps--main cardTitle StyledProps--color StyledProps--color-black StyledProps--margin-bottom-large"
                        >
                          pipelineSteps.build.infraSpecifications.propagate
                        </p>
                        <div
                          class="bp3-form-group"
                          data-id="useFromStage-0"
                        >
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-popover-wrapper Select--main bp3-fill"
                            >
                              <div
                                class="bp3-popover-target"
                              >
                                <div
                                  class="bp3-input-group"
                                >
                                  <input
                                    autocomplete="off"
                                    class="bp3-input"
                                    name="useFromStage"
                                    placeholder="- Select -"
                                    style="padding-right: 0px;"
                                    type="text"
                                    value=""
                                  />
                                  <span
                                    class="bp3-input-action"
                                  >
                                    <span
                                      class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                      icon="chevron-down"
                                    >
                                      <svg
                                        data-icon="chevron-down"
                                        height="14"
                                        viewBox="0 0 16 16"
                                        width="14"
                                      >
                                        <desc>
                                          chevron-down
                                        </desc>
                                        <path
                                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        
                        <div
                          class="Accordion--accordion"
                        >
                          <div
                            class="Accordion--panel"
                            data-open="false"
                            data-testid="advanced-panel"
                            id="advanced-panel"
                          >
                            <div
                              class="Accordion--summary"
                              data-testid="advanced-summary"
                            >
                              <div
                                class=""
                              >
                                <div
                                  class="tabHeading"
                                  id="advanced"
                                  style="margin-bottom: 0px;"
                                >
                                  advancedTitle
                                </div>
                              </div>
                              <div
                                class="Accordion--chevron"
                              />
                            </div>
                            <div
                              class="bp3-collapse Accordion--collapse"
                            >
                              <div
                                aria-hidden="false"
                                class="bp3-collapse-body"
                                style="transform: translateY(-undefinedpx);"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="card active"
                      >
                        <p
                          class="StyledProps--font StyledProps--main cardTitle StyledProps--color StyledProps--color-black StyledProps--margin-bottom-large"
                        >
                          pipelineSteps.build.infraSpecifications.newConfiguration
                        </p>
                        <div
                          class="StyledProps--font StyledProps--main bottomMargin3"
                        >
                          <div
                            class="connectorLabel"
                          >
                            <div
                              class="StyledProps--font StyledProps--main"
                              style="margin-bottom: 5px;"
                            >
                              <span
                                class="Tooltip--acenter bp3-label"
                                data-tooltip-id="ciBuildInfra_connectorRef"
                              >
                                <p
                                  class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-bottom-xsmall"
                                >
                                  connectors.title.k8sCluster
                                </p>
                              </span>
                            </div>
                            <div
                              style="display: flex; align-items: center;"
                            >
                              <div
                                class="bp3-form-group"
                                data-id="undefined-1"
                                style="margin-bottom: 0px;"
                              >
                                <div
                                  class="bp3-form-content"
                                >
                                  <div
                                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                                    style="width: 300px;"
                                  >
                                    <button
                                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                                      data-testid="cr-field-connectorRef"
                                      style="width: 300px;"
                                      type="button"
                                    >
                                      <span
                                        class="bp3-button-text"
                                      >
                                        <div
                                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                                        >
                                          <span
                                            class="bp3-popover-wrapper"
                                          >
                                            <span
                                              class="bp3-popover-target Text--targetClass"
                                            >
                                              <p
                                                class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                                                tabindex="0"
                                              >
                                                tesa 1
                                              </p>
                                            </span>
                                          </span>
                                          <div
                                            class="rightStatus"
                                          >
                                            <span
                                              class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                                              data-testid="crf-status"
                                              icon="full-circle"
                                            >
                                              <svg
                                                data-icon="full-circle"
                                                height="6"
                                                viewBox="0 0 16 16"
                                                width="6"
                                              >
                                                <desc>
                                                  full-circle
                                                </desc>
                                                <path
                                                  d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                                  fill-rule="evenodd"
                                                />
                                              </svg>
                                            </span>
                                            <span
                                              class="Tag--main"
                                            >
                                              <span
                                                class="bp3-tag bp3-minimal"
                                                id="tag"
                                              >
                                                <span
                                                  class="bp3-text-overflow-ellipsis bp3-fill"
                                                >
                                                  project
                                                </span>
                                              </span>
                                            </span>
                                          </div>
                                        </div>
                                      </span>
                                      <span
                                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                                        icon="chevron-down"
                                      >
                                        <svg
                                          data-icon="chevron-down"
                                          height="14"
                                          viewBox="0 0 16 16"
                                          width="14"
                                        >
                                          <desc>
                                            chevron-down
                                          </desc>
                                          <path
                                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                            fill-rule="evenodd"
                                          />
                                        </svg>
                                      </span>
                                    </button>
                                    <span
                                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                    >
                                      <span
                                        class="bp3-popover-target"
                                      >
                                        <button
                                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                        >
                                          <span
                                            class="bp3-icon StyledProps--main"
                                            data-icon="fixed-input"
                                          >
                                            <svg
                                              height="12"
                                              viewBox="0 0 9 9"
                                              width="12"
                                              xmlns="http://www.w3.org/2000/svg"
                                            >
                                              <path
                                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                                fill="currentColor"
                                              />
                                            </svg>
                                          </span>
                                        </button>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="fieldsGroup withoutSpacing"
                        >
                          <div
                            style="width: 300px;"
                          >
                            <div
                              class="Text--withDocsTooltip"
                              data-tooltip-id="namespace"
                            >
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-bottom-xsmall"
                              >
                                pipelineSteps.build.infraSpecifications.namespace
                              </p>
                            </div>
                            <div
                              style="display: flex; align-items: center;"
                            >
                              <div
                                class="bp3-form-group"
                                data-id="namespace-2"
                                style="margin-bottom: 0px; flex-grow: 1;"
                              >
                                
                                <div
                                  class="bp3-form-content"
                                >
                                  <div
                                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                                  >
                                    <div
                                      class="bp3-input-group MultiTypeInput--input"
                                    >
                                      <input
                                        autocomplete="off"
                                        class="bp3-input"
                                        name="namespace"
                                        placeholder="pipeline.infraSpecifications.namespacePlaceholder"
                                        type="text"
                                        value=""
                                      />
                                    </div>
                                    <span
                                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                    >
                                      <span
                                        class="bp3-popover-target"
                                      >
                                        <button
                                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                        >
                                          <span
                                            class="bp3-icon StyledProps--main"
                                            data-icon="fixed-input"
                                          >
                                            <svg
                                              height="12"
                                              viewBox="0 0 9 9"
                                              width="12"
                                              xmlns="http://www.w3.org/2000/svg"
                                            >
                                              <path
                                                d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                                fill="currentColor"
                                              />
                                            </svg>
                                          </span>
                                        </button>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="StyledProps--font StyledProps--main StyledProps--padding-bottom-medium"
                        >
                          <div
                            class="Accordion--accordion"
                          >
                            <div
                              class="Accordion--panel"
                              data-open="false"
                              data-testid="advanced-panel"
                              id="advanced-panel"
                            >
                              <div
                                class="Accordion--summary"
                                data-testid="advanced-summary"
                              >
                                <div
                                  class=""
                                >
                                  <div
                                    class="tabHeading"
                                    id="advanced"
                                    style="margin-bottom: 0px;"
                                  >
                                    advancedTitle
                                  </div>
                                </div>
                                <div
                                  class="Accordion--chevron"
                                />
                              </div>
                              <div
                                class="bp3-collapse Accordion--collapse"
                              >
                                <div
                                  aria-hidden="false"
                                  class="bp3-collapse-body"
                                  style="transform: translateY(-undefinedpx);"
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BuildInfraSpecifications snapshot tests for K8s Build Infra able to select a connector 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="contentSection"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
            id="infrastructureDefinition"
          >
            pipelineSteps.build.infraSpecifications.whereToRun
          </p>
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--horizontal Layout--layout-spacing-xxlarge StyledProps--main"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <div
                    class="bp3-card bp3-elevation-0 Card--card sectionCard"
                  >
                    <div
                      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main bottomMargin3"
                      >
                        <div
                          class="connectorLabel"
                        >
                          <div
                            class="StyledProps--font StyledProps--main"
                            style="margin-bottom: 5px;"
                          >
                            <span
                              class="Tooltip--acenter bp3-label"
                              data-tooltip-id="ciBuildInfra_connectorRef"
                            >
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-bottom-xsmall"
                              >
                                connectors.title.k8sCluster
                              </p>
                            </span>
                          </div>
                          <div
                            style="display: flex; align-items: center;"
                          >
                            <div
                              class="bp3-form-group"
                              data-id="undefined-0"
                              style="margin-bottom: 0px;"
                            >
                              <div
                                class="bp3-form-content"
                              >
                                <div
                                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                                  style="width: 300px;"
                                >
                                  <button
                                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                                    data-testid="cr-field-connectorRef"
                                    style="width: 300px;"
                                    type="button"
                                  >
                                    <span
                                      class="bp3-button-text"
                                    >
                                      <div
                                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                                      >
                                        <span
                                          class="bp3-popover-wrapper"
                                        >
                                          <span
                                            class="bp3-popover-target Text--targetClass"
                                          >
                                            <p
                                              class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                                              tabindex="0"
                                            >
                                              tesa 1
                                            </p>
                                          </span>
                                        </span>
                                        <div
                                          class="rightStatus"
                                        >
                                          <span
                                            class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                                            data-testid="crf-status"
                                            icon="full-circle"
                                          >
                                            <svg
                                              data-icon="full-circle"
                                              height="6"
                                              viewBox="0 0 16 16"
                                              width="6"
                                            >
                                              <desc>
                                                full-circle
                                              </desc>
                                              <path
                                                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                                fill-rule="evenodd"
                                              />
                                            </svg>
                                          </span>
                                          <span
                                            class="Tag--main"
                                          >
                                            <span
                                              class="bp3-tag bp3-minimal"
                                              id="tag"
                                            >
                                              <span
                                                class="bp3-text-overflow-ellipsis bp3-fill"
                                              >
                                                project
                                              </span>
                                            </span>
                                          </span>
                                        </div>
                                      </div>
                                    </span>
                                    <span
                                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                                      icon="chevron-down"
                                    >
                                      <svg
                                        data-icon="chevron-down"
                                        height="14"
                                        viewBox="0 0 16 16"
                                        width="14"
                                      >
                                        <desc>
                                          chevron-down
                                        </desc>
                                        <path
                                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                  <span
                                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                  >
                                    <span
                                      class="bp3-popover-target"
                                    >
                                      <button
                                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                      >
                                        <span
                                          class="bp3-icon StyledProps--main"
                                          data-icon="fixed-input"
                                        >
                                          <svg
                                            height="12"
                                            viewBox="0 0 9 9"
                                            width="12"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                              fill="currentColor"
                                            />
                                          </svg>
                                        </span>
                                      </button>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="fieldsGroup withoutSpacing"
                      >
                        <div
                          style="width: 300px;"
                        >
                          <div
                            class="Text--withDocsTooltip"
                            data-tooltip-id="namespace"
                          >
                            <p
                              class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-bottom-xsmall"
                            >
                              pipelineSteps.build.infraSpecifications.namespace
                            </p>
                          </div>
                          <div
                            style="display: flex; align-items: center;"
                          >
                            <div
                              class="bp3-form-group"
                              data-id="namespace-1"
                              style="margin-bottom: 0px; flex-grow: 1;"
                            >
                              
                              <div
                                class="bp3-form-content"
                              >
                                <div
                                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                                >
                                  <div
                                    class="bp3-input-group MultiTypeInput--input"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      name="namespace"
                                      placeholder="pipeline.infraSpecifications.namespacePlaceholder"
                                      type="text"
                                      value=""
                                    />
                                  </div>
                                  <span
                                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                  >
                                    <span
                                      class="bp3-popover-target"
                                    >
                                      <button
                                        class="MultiTypeInput--btn MultiTypeInput--FIXED"
                                      >
                                        <span
                                          class="bp3-icon StyledProps--main"
                                          data-icon="fixed-input"
                                        >
                                          <svg
                                            height="12"
                                            viewBox="0 0 9 9"
                                            width="12"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                              fill="currentColor"
                                            />
                                          </svg>
                                        </span>
                                      </button>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--padding-bottom-medium"
                  >
                    <div
                      class="Accordion--accordion"
                    >
                      <div
                        class="Accordion--panel"
                        data-open="false"
                        data-testid="advanced-panel"
                        id="advanced-panel"
                      >
                        <div
                          class="Accordion--summary"
                          data-testid="advanced-summary"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="tabHeading"
                              id="advanced"
                              style="margin-bottom: 0px;"
                            >
                              advancedTitle
                            </div>
                          </div>
                          <div
                            class="Accordion--chevron"
                          />
                        </div>
                        <div
                          class="bp3-collapse Accordion--collapse"
                        >
                          <div
                            aria-hidden="false"
                            class="bp3-collapse-body"
                            style="transform: translateY(-undefinedpx);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BuildInfraSpecifications snapshot tests for K8s Build Infra initializes ok for K8s Build Infra 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      class="contentSection"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
            id="infrastructureDefinition"
          >
            pipelineSteps.build.infraSpecifications.whereToRun
          </p>
          <form
            action="#"
            class="FormikForm--main"
          >
            <div>
              <div
                class="Layout--horizontal Layout--layout-spacing-xxlarge StyledProps--main"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <div
                    class="bp3-card bp3-elevation-0 Card--card sectionCard"
                  >
                    <div
                      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                    >
                      <div
                        class="StyledProps--font StyledProps--main bottomMargin3"
                      >
                        <div
                          class="connectorLabel"
                        >
                          <div
                            class="StyledProps--font StyledProps--main"
                            style="margin-bottom: 5px;"
                          >
                            <span
                              class="Tooltip--acenter bp3-label"
                              data-tooltip-id="ciBuildInfra_connectorRef"
                            >
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-bottom-xsmall"
                              >
                                connectors.title.k8sCluster
                              </p>
                            </span>
                          </div>
                          <div
                            style="display: flex; align-items: center;"
                          >
                            <div
                              class="bp3-form-group"
                              data-id="undefined-0"
                              style="margin-bottom: 0px;"
                            >
                              <div
                                class="bp3-form-content"
                              >
                                <div
                                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                                  style="width: 300px;"
                                >
                                  <button
                                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                                    data-testid="cr-field-connectorRef"
                                    style="width: 300px;"
                                    type="button"
                                  >
                                    <span
                                      class="bp3-button-text"
                                    >
                                      <div
                                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                                      >
                                        <span
                                          class="bp3-popover-wrapper"
                                        >
                                          <span
                                            class="bp3-popover-target Text--targetClass"
                                          >
                                            <p
                                              class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                                              tabindex="0"
                                            >
                                              tesa 1
                                            </p>
                                          </span>
                                        </span>
                                        <div
                                          class="rightStatus"
                                        >
                                          <span
                                            class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                                            data-testid="crf-status"
                                            icon="full-circle"
                                          >
                                            <svg
                                              data-icon="full-circle"
                                              height="6"
                                              viewBox="0 0 16 16"
                                              width="6"
                                            >
                                              <desc>
                                                full-circle
                                              </desc>
                                              <path
                                                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                                fill-rule="evenodd"
                                              />
                                            </svg>
                                          </span>
                                          <span
                                            class="Tag--main"
                                          >
                                            <span
                                              class="bp3-tag bp3-minimal"
                                              id="tag"
                                            >
                                              <span
                                                class="bp3-text-overflow-ellipsis bp3-fill"
                                              >
                                                project
                                              </span>
                                            </span>
                                          </span>
                                        </div>
                                      </div>
                                    </span>
                                    <span
                                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                                      icon="chevron-down"
                                    >
                                      <svg
                                        data-icon="chevron-down"
                                        height="14"
                                        viewBox="0 0 16 16"
                                        width="14"
                                      >
                                        <desc>
                                          chevron-down
                                        </desc>
                                        <path
                                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="fieldsGroup withoutSpacing"
                      >
                        <div
                          style="width: 300px;"
                        >
                          <div
                            class="Text--withDocsTooltip"
                            data-tooltip-id="namespace"
                          >
                            <p
                              class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label StyledProps--margin-bottom-xsmall"
                            >
                              pipelineSteps.build.infraSpecifications.namespace
                            </p>
                          </div>
                          <div
                            style="display: flex; align-items: center;"
                          >
                            <div
                              class="bp3-form-group"
                              data-id="namespace-1"
                              style="margin-bottom: 0px; flex-grow: 1;"
                            >
                              
                              <div
                                class="bp3-form-content"
                              >
                                <div
                                  class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                                >
                                  <div
                                    class="bp3-input-group MultiTypeInput--input"
                                  >
                                    <input
                                      autocomplete="off"
                                      class="bp3-input"
                                      name="namespace"
                                      placeholder="pipeline.infraSpecifications.namespacePlaceholder"
                                      type="text"
                                      value=""
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--padding-bottom-medium"
                  >
                    <div
                      class="Accordion--accordion"
                    >
                      <div
                        class="Accordion--panel"
                        data-open="false"
                        data-testid="advanced-panel"
                        id="advanced-panel"
                      >
                        <div
                          class="Accordion--summary"
                          data-testid="advanced-summary"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="tabHeading"
                              id="advanced"
                              style="margin-bottom: 0px;"
                            >
                              advancedTitle
                            </div>
                          </div>
                          <div
                            class="Accordion--chevron"
                          />
                        </div>
                        <div
                          class="bp3-collapse Accordion--collapse"
                        >
                          <div
                            aria-hidden="false"
                            class="bp3-collapse-body"
                            style="transform: translateY(-undefinedpx);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
